Quick view button icon alignment issue fixed

--- a/packages/Webkul/Velocity/src/Resources/assets/sass/components/app.scss
+++ b/packages/Webkul/Velocity/src/Resources/assets/sass/components/app.scss
@@ -339,7 +339,7 @@
 
     span {
         left: 32%;
-        top: -26px;
+        top: -28px;
         z-index: 1;
         font-size: 16px;
         color: #ffffff;
